# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import postsRouter from "./posts";
+import { siteSettingsRouter } from "./site-settings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(authRouter);
 router.use(postsRouter);
+router.use(siteSettingsRouter);
 
 export default router;
